--- a/vite-project/src/App.css
+++ b/vite-project/src/App.css
@@ -59,7 +59,7 @@
     justify-content: center;
     width: 100%;
     font-size: 25px;
-    margin-top: ;
+    margin-top: 20px;
 }
 .data_value{
     display: flex;
